--- a/Project-1/encyclopedia/templates/encyclopedia/entry.html
+++ b/Project-1/encyclopedia/templates/encyclopedia/entry.html
@@ -6,4 +6,10 @@
 
 {% block body %}
     <h3>{{ content|safe }}</h3>
+
+    <form action="{% url 'edit' %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="entry_title" value="{{ title }}">
+        <input type="submit" value="Edit">
+    </form>
 {% endblock %}
