--- a/Project-1/encyclopedia/templates/encyclopedia/new.html
+++ b/Project-1/encyclopedia/templates/encyclopedia/new.html
@@ -8,6 +8,7 @@
     <h1>New Page</h1>
 
     <form action="{% url 'new_page' %}" method="POST">
+        {% csrf_token %}
         <label for="title">Title:</label>
         <input type="text" name="title" placeholder="Enter the title"><br>
         <label for="content">Markdown Content:</label><br>
